apps/infrastructure/qbittorrent/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - __HOSTNAME__
      secretName: qbittorrent-web-ui-tls

  rules:
    - host: __HOSTNAME__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
